Application/yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
# Set your lab user name
  name: user14-hello-world
spec:
  containers:
      - name: hello-world
        image: 'quay.io/taland2/talfirstimage:v2'
  replicas: 3
  selector:
    matchLabels:
# Set your lab user name
      app: user14-hello-world
  template:
    metadata:
      labels:
# Set your lab user name
        app: user14-hello-world
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: hello-world
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
# Update with the image you build in part 1
          image: 'quay.io/user14/talfirstimage:v1'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
